# video-translator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: install_dependencies.sh
src/video_translator/: __init__.py  audio_processor.py  main.py  text_processor.py  utils.py  video_processor.py
src/yt_downloader/: __init__.py  yt_downloader.py
tests/: test_audio_processor.py  test_text_processor.py  test_video_processor.py  test_youtube_downloader.py
