[tool.poetry]
name = "video-translator"
version = "0.1.0"
description = "A tool to translate videos from English to Vietnamese"
authors = ["CanhTa <canh.tc98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
moviepy = "^1.0.3"
speechrecognition = "^3.10.4"
googletrans = "^3.0.0"
gtts = "^2.5.1"
pydub = "^0.25.1"
yt-dlp = "^2024.7.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"

[tool.poetry.scripts]
download = "src.yt_downloader.yt_downloader:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100