[tool.poetry]
name = "video-translator"
version = "0.1.0"
description = "A tool to translate videos from English to Vietnamese"
authors = ["CanhTa <canh.tc98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydub = "^0.25.1"
yt-dlp = "^2024.7.9"
ffmpeg-python = "^0.2.0"
webvtt-py = "^0.5.1"
gtts = "^2.5.1"
python-dotenv = "^1.0.1"
googletrans = "4.0.0rc1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
pre-commit = "^3.7.1"

[tool.poetry.scripts]
download = "src.yt_downloader.yt_downloader:main"
translate = "src.video_translator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
